<resources>
    <string name="app_name">Tv Online</string>
    <string name="admob_banner_ad_unit_id">ca-app-pub-8677076934480421/6472119797</string>
    <string name="admob_interstitial_unit_id">ca-app-pub-8677076934480421/6895378357</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="drawer_category">Categorias</string>
    <string name="drawer_movie">Filmes</string>
    <string name="drawer_rate">Rate</string>
    <string name="drawer_more">More Apps</string>
    <string name="drawer_share">Share</string>
    <string name="drawer_about">Sobre</string>

    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=Maurino</string>

    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="video_player_error">Unfortunately, an error occurred during playback.</string>


    <string name="tema_escuro">Dark Theme</string>
    <string name="abrir_url">Open URL</string>
    <string name="digite_a_url_do_canal">Enter the channel URL</string>
    <string name="URL_canal">Enter the channel URL</string>
    <string name="gostaria_compartilhar">I would like to share this Online TV app.</string>
    <string name="package_name">https://play.google.com/store/apps/details?id=com.m.f.tvonline</string>
    <string name="App_name">TV Online</string>
    <string name="compartilhar">Share</string>
    <string name="play_store">http://play.google.com/store/apps/details?id=</string>
    <string name="market">market://details?id=</string>
    <string name="aviso">Notice</string>
    <string name="sem_internet">No Internet connection.</string>
    <string name="ativar_msg">Would you like to activate?</string>
    <string name="ativar">Activate</string>
    <string name="cancelar">Cancel</string>
    <string name="confirmar">Confirmation</string>
    <string name="deseja_sair">Are you sure you want to exit?</string>
    <string name="nao">No</string>
    <string name="sim">Yes</string>
    <string name="player_externo">External Player</string>
    <string name="instalar_mxplayer">Do you want to install MX Player?</string>
    <string name="instalar_vlc">Want to install VLC?</string>
    <string name="escolha_o_player">Choose the player</string>
    <string name="search">Search</string>
    <string name="player_ext">Choose the player</string>

    <!--favorite-->
    <string name="favorite_added">Adicionado aos Favoritos</string>
    <string name="favorite_removed">Removido dos Favoritos</string>
    <string name="no_favorite_found">Qual é seu favorito&#8230; ?</string>


</resources>
