<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/search"
        android:title="@string/search"
        app:showAsAction="always|collapseActionView"
        android:icon="@drawable/ic_search"
        app:actionViewClass="android.support.v7.widget.SearchView"/>


<item
    android:title="main"
    app:showAsAction="always"
    android:icon="@drawable/ic_morev">
    <menu>

    <item
        android:id="@+id/url"
        android:title="@string/abrir_url"
        android:icon="@drawable/ic_url" />

    <item
        android:id="@+id/drawer_rate"
        android:icon="@drawable/ic_rate"
        android:title="@string/drawer_rate" />

    <item
        android:id="@+id/drawer_more"
        android:icon="@drawable/ic_more"
        android:title="@string/drawer_more" />

    <item
        android:id="@+id/drawer_share"
        android:icon="@drawable/ic_share_menu"
        android:title="@string/drawer_share" />

        <item
            android:id="@+id/nightmode"
            android:icon="@drawable/ic_night"
            android:title="@string/tema_escuro" />

</menu>
</item>

</menu>